# OPAC-system

./: .gitignore  AGENTS.md  README.md  dev.cmd  package.json  railway.json  tauri-dev.cmd  vercel.json
lib-mgmt/: .env.example  README.md  package-lock.json  package.json  tauri-dev.cmd
lib-mgmt/docs/: README.md
lib-mgmt/src/: App.tsx
lib-mgmt/src-tauri/: Cargo.toml  tauri.conf.json
lib-mgmt/src-tauri/migrations/: phase11_rbac.sql
lib-mgmt/src-tauri/src/: auth.rs  db.rs  import.rs  lib.rs  main.rs  models.rs  settings.rs
lib-mgmt/src/components/ai/: AIChatBadge.tsx
lib-mgmt/src/components/auth/: ErrorDialog.tsx  RequirePermission.tsx
lib-mgmt/src/components/catalog/: AuthorityDialog.tsx  CatalogForm.tsx
lib-mgmt/src/components/circulation/: CirculationDashboard.tsx  ReservationDialog.tsx
lib-mgmt/src/components/dashboard/: SyncComboButton.tsx  SyncLogsDialog.tsx  Toolbar.tsx
lib-mgmt/src/components/inventory/: AcquisitionsDialog.tsx
lib-mgmt/src/components/layout/: AboutDialog.tsx  MainLayout.tsx  UserProfile.tsx
lib-mgmt/src/components/management/: ImportMdbDialog.tsx  ImportSummaryView.tsx
lib-mgmt/src/components/patrons/: FinancialReportsDialog.tsx
lib-mgmt/src/components/settings/: ImageEditorDialog.tsx
lib-mgmt/src/hooks/: useAuth.ts
lib-mgmt/src/lib/: runtimeBridge.ts
lib-mgmt/src/stores/: auditStore.ts  authStore.ts  catalogStore.ts  circulationStore.ts  patronStore.ts  syncStore.ts
lib-mgmt/src/utils/: excelExport.ts  tauriRuntime.ts
server/: .env.example  index.js  package-lock.json  package.json
(+14 files in other folders)
